--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,9 @@ url: "http://blog.michaelbateman.ca" # the base hostname & protocol for your sit
 
 # Build settings
 markdown: kramdown
+
+gems:
+  - jekyll-feed
+exclude:
+  - Gemfile
+  - Gemfile.lock
